@@ -30,6 +30,13 @@ carried from zipfile.</p>
     <td valign="top">directory where to store the expanded files.</td>
     <td align="center" valign="top">Yes</td>
   </tr>
+  <tr>
+    <td valign="top">overwrite</td>
+    <td valign="top">Overwrite files, even if they are newer than the
+      corresponding entries in the archive (true or false, default is
+      true).</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <blockquote>
